--- a/.htaccess
+++ b/.htaccess
@@ -29,12 +29,9 @@
 		Order Deny,Allow
 		Deny from All
 	</Files>
-	#<FilesMatch "^(name)\.php$">
-	#	Allow from All
-	#</FilesMatch>
-	#<FilesMatch "^(name)\.php$">
-	#	Allow from 192.168.100
-	#</FilesMatch>
+	<FilesMatch "^Client$">
+		Allow from All
+	</FilesMatch>
 
 
 # Cache settings
