Research: Database-Schema

--- a/Sphere/Application/System/Service/Database/Config/Property.ini
+++ b/Sphere/Application/System/Service/Database/Config/Property.ini
@@ -1,6 +1,6 @@
 [Master:Default]
 Driver = pdo_mysql
-Host = '192.168.100.204'
+Host = '192.168.100.205'
 Port =
 Username = 'root'
 Password = 'kuw'
@@ -8,15 +8,15 @@ Database = 'KredaProperty'
 
 [Slave:Default]
 Driver = pdo_mysql
-Host = '192.168.100.204'
+Host = '192.168.100.205'
 Port =
 Username = 'root'
 Password = 'kuw'
 Database = 'KredaProperty'
 
-[Master:Schule1]
+[Master:Annaberg]
 Driver = pdo_mysql
-Host = '192.168.100.204'
+Host = '192.168.100.205'
 Port =
 Username = 'root'
 Password = 'kuw'
