Research: ORM-Api

--- a/Sphere/Application/System/Service/Database/Config/Access.ini
+++ b/Sphere/Application/System/Service/Database/Config/Access.ini
@@ -1,7 +1,7 @@
 [Master:Default]
 Driver = pdo_mysql
-Host = '192.168.100.204'
+Host = '192.168.100.154'
 Port =
-Username = 'root'
-Password = 'kuw'
+Username = 'kreda'
+Password = 'kreda'
 Database = 'KredaAccess'
