--- a/Sphere/Application/System/Service/Database/Config/Gatekeeper-Account.ini
+++ b/Sphere/Application/System/Service/Database/Config/Gatekeeper-Account.ini
@@ -5,3 +5,11 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaGatekeeper'
+
+[Slave:Default]
+Driver = pdo_mysql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGatekeeper'
