--- a/Sphere/Application/System/Database/Config/Management.ini
+++ b/Sphere/Application/System/Database/Config/Management.ini
@@ -1,7 +1,7 @@
-[Master:Default]
-Driver = pdo_mysql
+[People:Annaberg]
+Driver = PdoMySql
 Host = '192.168.100.154'
 Port =
 Username = 'kreda'
 Password = 'kreda'
-Database = 'KredaGatekeeper'
+Database = 'KredaPeople'
