--- a/Sphere/Application/System/Database/Config/Management.ini
+++ b/Sphere/Application/System/Database/Config/Management.ini
@@ -1,7 +1,15 @@
-[People:Annaberg]
+[HumanResources:Annaberg]
 Driver = PdoMySql
 Host = '192.168.100.154'
 Port =
 Username = 'kreda'
 Password = 'kreda'
-Database = 'KredaPeople'
+Database = 'KredaHumanResources'
+
+[HumanResources:Waldenburg]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaHumanResources'
