--- a/Sphere/Application/System/Database/Config/Management.ini
+++ b/Sphere/Application/System/Database/Config/Management.ini
@@ -6,26 +6,10 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaHumanResources'
 
-[HumanResources:Waldenburg]
+[Education:Annaberg]
 Driver = PdoMySql
 Host = '192.168.100.154'
 Port =
 Username = 'kreda'
 Password = 'kreda'
-Database = 'KredaHumanResources'
-
-[Subject:]
-Driver = PdoMySql
-Host = '192.168.100.154'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaSubject'
-
-[Grade:]
-Driver = PdoMySql
-Host = '192.168.100.154'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaGrade'
+Database = 'KredaEducation'
