Code Review: Refactor

--- a/Sphere/Application/System/Database/Config/Management.ini
+++ b/Sphere/Application/System/Database/Config/Management.ini
@@ -1,10 +1,10 @@
-[HumanResources:Annaberg]
+[Person:Annaberg]
 Driver = PdoMySql
 Host = '192.168.100.154'
 Port =
 Username = 'kreda'
 Password = 'kreda'
-Database = 'KredaHumanResources'
+Database = 'KredaPerson'
 
 [Education:Annaberg]
 Driver = PdoMySql
