--- a/Sphere/Application/System/Database/Config/Management.ini
+++ b/Sphere/Application/System/Database/Config/Management.ini
@@ -13,3 +13,11 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaEducation'
+
+[Address:Annaberg]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaAddress'
