Code Review: Refactor

--- a/Sphere/Application/System/Database/Config/Management.ini
+++ b/Sphere/Application/System/Database/Config/Management.ini
@@ -1,4 +1,4 @@
-[Person:Annaberg]
+[Person:EGE]
 Driver = PdoMySql
 Host = '192.168.100.154'
 Port =
@@ -6,7 +6,15 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaPerson'
 
-[Education:Annaberg]
+[Person:ESZC]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaPerson'
+
+[Education:EGE]
 Driver = PdoMySql
 Host = '192.168.100.154'
 Port =
@@ -14,7 +22,23 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaEducation'
 
-[Address:Annaberg]
+[Education:ESZC]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaEducation'
+
+[Address:EGE]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaAddress'
+
+[Address:ESZC]
 Driver = PdoMySql
 Host = '192.168.100.154'
 Port =
