--- a/Sphere/Common/Database/Config/Graduation.ini
+++ b/Sphere/Common/Database/Config/Graduation.ini
@@ -13,3 +13,35 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaGraduation'
+
+[Score:EGE]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Score:ESZC]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Grade:EGE]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Grade:ESZC]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
