Code Review: Refactor (Abstract Frontend)

--- a/Sphere/Common/Database/Config/Billing.ini
+++ b/Sphere/Common/Database/Config/Billing.ini
@@ -1,7 +1,31 @@
-[Protocol:]
+[Account:EGE]
 Driver = PdoMySql
 Host = '192.168.100.154'
 Port =
 Username = 'kreda'
 Password = 'kreda'
-Database = 'KredaProtocol'
+Database = 'KredaBilling'
+
+[Account:ESCZ]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Transfer:EGE]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Transfer:ESCZ]
+Driver = PdoMsSql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
