Code Review: Refactor (Abstract Frontend)

--- a/Sphere/Common/Database/Config/Billing.ini
+++ b/Sphere/Common/Database/Config/Billing.ini
@@ -1,3 +1,11 @@
+[Account:DS]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
 [Account:EGE]
 Driver = PdoMySql
 Host = '192.168.100.154'
@@ -7,6 +15,14 @@ Password = 'kreda'
 Database = 'KredaBilling'
 
 [Account:ESCZ]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Transfer:DS]
 Driver = PdoMySql
 Host = '192.168.100.154'
 Port =
