--- a/Sphere/Common/Database/Config/Graduation.ini
+++ b/Sphere/Common/Database/Config/Graduation.ini
@@ -1,3 +1,11 @@
+[Weight:DS]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
 [Weight:EGE]
 Driver = PdoMySql
 Host = '192.168.100.154'
@@ -14,6 +22,14 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaGraduation'
 
+[Score:DS]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
 [Score:EGE]
 Driver = PdoMySql
 Host = '192.168.100.154'
@@ -23,6 +39,14 @@ Password = 'kreda'
 Database = 'KredaGraduation'
 
 [Score:ESZC]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Grade:DS]
 Driver = PdoMySql
 Host = '192.168.100.154'
 Port =
