--- a/Sphere/Common/Database/Config/Management.ini
+++ b/Sphere/Common/Database/Config/Management.ini
@@ -1,3 +1,11 @@
+[Person:DS]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaPerson'
+
 [Person:EGE]
 Driver = PdoMySql
 Host = '192.168.100.154'
@@ -14,6 +22,14 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaPerson'
 
+[Education:DS]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaEducation'
+
 [Education:EGE]
 Driver = PdoMySql
 Host = '192.168.100.154'
@@ -29,6 +45,14 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaEducation'
+
+[Address:DS]
+Driver = PdoMySql
+Host = '192.168.100.154'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaAddress'
 
 [Address:EGE]
 Driver = PdoMySql
