--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,18 @@
 {
-  "name": "kwzwickau/kreda-sphere",
-  "description": "Schulverwaltung",
+  "name": "kreda/kreda-sphere",
+  "description": "",
   "minimum-stability": "stable",
-  "license": "proprietary",
+  "license": "AGPL",
+  "homepage": "https://github.com/KWZwickau/KREDA-Sphere",
   "authors": [
     {
       "name": "DerDu",
       "email": "gerdchristian.kunze@googlemail.com"
     }
   ],
+  "require": {
+    "php": ">=5.3.2"
+  },
   "require-dev": {
     "codeclimate/php-test-reporter": "dev-master"
   }
