Code Review: Refactor / Quality

--- a/Sphere/Common/Database/Config/Billing.ini
+++ b/Sphere/Common/Database/Config/Billing.ini
@@ -14,7 +14,7 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaBilling'
 
-[Account:ESCZ]
+[Account:ESZC]
 Driver = PdoMySql
 Host = '192.168.100.154'
 Port =
@@ -38,7 +38,7 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaBilling'
 
-[Transfer:ESCZ]
+[Transfer:ESZC]
 Driver = PdoMsSql
 Host = '192.168.100.154'
 Port =
