--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "kreda/kreda-sphere",
   "description": "",
   "minimum-stability": "stable",
-  "license": "AGPL",
+  "license": "AGPL-3.0",
   "homepage": "https://github.com/KWZwickau/KREDA-Sphere",
   "authors": [
     {
