--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,13 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
 matrix:
   allow_failures:
     - php: 5.3
     - php: 5.6
+    - php: 7.0
     - php: hhvm
 
 before_script:
