--- a/.htaccess
+++ b/.htaccess
@@ -45,10 +45,13 @@
 	#RewriteCond %{SERVER_PORT} 80
 	#RewriteRule ^(.*)$ https://www.kreda-professional.de/$1 [R=301,L]
 
-	#Remove "index.php":
-#	RewriteCond %{REQUEST_FILENAME} !-f
-#    RewriteCond %{REQUEST_FILENAME} !-d
-#    RewriteRule ^(.*)$ /Client$1 [L,QSA]
+# Platform Root
+	RewriteCond %{REQUEST_URI} !^/Client
+	RewriteCond %{REQUEST_URI} !^/Library
+	RewriteCond %{REQUEST_URI} !^/Sphere/Client/Style
+	RewriteCond %{REQUEST_URI} !^/Sphere/Client/Script
+	RewriteCond %{REQUEST_URI} !^/TestSuite/Console
+	RewriteRule ^(.*)$ /Client/$1 [L,R=302]
 
 
 # Cache settings
