--- a/Sphere/Common/Database/Config/Demo.ini
+++ b/Sphere/Common/Database/Config/Demo.ini
@@ -1,6 +1,6 @@
 [DemoService:DS]
-Driver = PdoMySql
-Host = '192.168.100.154'
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
