--- a/Sphere/Common/Database/Config/Management.ini
+++ b/Sphere/Common/Database/Config/Management.ini
@@ -1,22 +1,22 @@
 [Person:DS]
-Driver = PdoMySql
-Host = '192.168.100.154'
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaPerson'
 
 [Address:DS]
-Driver = PdoMySql
-Host = '192.168.100.154'
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaAddress'
 
 ;[Education:DS]
-;Driver = PdoMySql
-;Host = '192.168.100.154'
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
 ;Port =
 ;Username = 'kreda'
 ;Password = 'kreda'
