--- a/Sphere/Common/Youtrack/Config/Youtrack.ini
+++ b/Sphere/Common/Youtrack/Config/Youtrack.ini
@@ -1,4 +1,3 @@
-;Host = 'http://ticket.swe.haus-der-edv.de'
-Host = 192.168.33.150:8080
+Host = '192.168.33.150:8080'
 Username = 'KREDA-Support'
 Password = 'Professional'
