--- a/Sphere/Common/Database/Config/Management.ini
+++ b/Sphere/Common/Database/Config/Management.ini
@@ -14,10 +14,10 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaAddress'
 
-;[Education:DS]
-;Driver = 'PdoMySql'
-;Host = '192.168.10.178'
-;Port =
-;Username = 'kreda'
-;Password = 'kreda'
-;Database = 'KredaEducation'
+[Education:DS]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaEducation'
