--- a/Sphere/Common/Database/Config/Demo.ini
+++ b/Sphere/Common/Database/Config/Demo.ini
@@ -5,3 +5,11 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaDemo'
+
+[DemoService:EGE]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaDemo'
