Code Review: Refactor/Quality/Performance

--- a/Sphere/Common/Database/Config/Graduation.ini
+++ b/Sphere/Common/Database/Config/Graduation.ini
@@ -45,3 +45,27 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaGraduation'
+
+[Grade:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Score:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Weight:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
