--- a/Sphere/Common/Database/Config/Management.ini
+++ b/Sphere/Common/Database/Config/Management.ini
@@ -22,6 +22,22 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaEducation'
 
+[Course:DS]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaCourse'
+
+[Student:DS]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaStudent'
+
 [Person:EGE]
 Driver = 'PdoMySql'
 Host = '192.168.10.178'
