--- a/Sphere/Common/Database/Config/Graduation.ini
+++ b/Sphere/Common/Database/Config/Graduation.ini
@@ -1,3 +1,7 @@
+;#################################################################
+;# DS
+;#################################################################
+
 [Grade:DS]
 Driver = 'PdoMySql'
 Host = '192.168.10.178'
@@ -21,6 +25,10 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaGraduation'
+
+;#################################################################
+;# EGE
+;#################################################################
 
 [Grade:EGE]
 Driver = 'PdoMySql'
@@ -46,6 +54,38 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaGraduation'
 
+;#################################################################
+;# ESVL
+;#################################################################
+
+[Grade:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Score:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Weight:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+;#################################################################
+;# ESZC
+;#################################################################
+
 [Grade:ESZC]
 Driver = 'PdoMySql'
 Host = '192.168.10.178'
@@ -63,6 +103,146 @@ Password = 'kreda'
 Database = 'KredaGraduation'
 
 [Weight:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+;#################################################################
+;# EVAMTL
+;#################################################################
+
+[Grade:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Score:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Weight:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+;#################################################################
+;# EVAP
+;#################################################################
+
+[Grade:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Score:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Weight:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+;#################################################################
+;# EVOSG
+;#################################################################
+
+[Grade:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Score:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Weight:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+;#################################################################
+;# EZGH
+;#################################################################
+
+[Grade:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Score:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Weight:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+;#################################################################
+;# LWSZ
+;#################################################################
+
+[Grade:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Score:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Weight:LWSZ]
 Driver = 'PdoMySql'
 Host = '192.168.10.178'
 Port =
