Change DS Databases, Gatekeeper and Protocol to localhost

--- a/Sphere/Common/Database/Config/Graduation.ini
+++ b/Sphere/Common/Database/Config/Graduation.ini
@@ -4,26 +4,26 @@
 
 [Grade:DS]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaGraduation'
 
 [Score:DS]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaGraduation'
 
 [Weight:DS]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaGraduation'
 
 ;#################################################################
