--- a/Sphere/Common/Database/Config/Management.ini
+++ b/Sphere/Common/Database/Config/Management.ini
@@ -4,42 +4,42 @@
 
 [Person:DS]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaPerson'
 
 [Address:DS]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaAddress'
 
 [Education:DS]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaEducation'
 
 [Course:DS]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaCourse'
 
 [Student:DS]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaStudent'
 
 ;#################################################################
