--- a/Sphere/Common/Database/Config/System.ini
+++ b/Sphere/Common/Database/Config/System.ini
@@ -1,7 +1,7 @@
 [Protocol:]
 Driver = 'PdoMySql'
-Host = '192.168.10.179'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaProtocol'
