--- a/Sphere/Common/Database/Config/Billing.ini
+++ b/Sphere/Common/Database/Config/Billing.ini
@@ -4,10 +4,10 @@
 
 [Account:DS]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaBilling'
 
 ;#################################################################
