--- a/Sphere/Common/Database/Config/Gatekeeper.ini
+++ b/Sphere/Common/Database/Config/Gatekeeper.ini
@@ -1,31 +1,31 @@
 [Access:]
 Driver = 'PdoMySql'
-Host = '192.168.10.179'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaGatekeeper'
 
 [Account:]
 Driver = 'PdoMySql'
-Host = '192.168.10.179'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaGatekeeper'
 
 [Token:]
 Driver = 'PdoMySql'
-Host = '192.168.10.179'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaGatekeeper'
 
 [Consumer:]
 Driver = 'PdoMySql'
-Host = '192.168.10.179'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaGatekeeper'
