--- a/Sphere/Common/Database/Config/Management.ini
+++ b/Sphere/Common/Database/Config/Management.ini
@@ -45,351 +45,351 @@ Database = 'KredaStudent'
 ;#################################################################
 ;# EGE
 ;#################################################################
-
-[Person:EGE]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:EGE]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:EGE]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:EGE]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:EGE]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-;#################################################################
-;# ESVL
-;#################################################################
-
-[Person:ESVL]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:ESVL]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:ESVL]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:ESVL]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:ESVL]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-;#################################################################
-;# ESZC
-;#################################################################
-
-[Person:ESZC]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:ESZC]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:ESZC]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:ESZC]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:ESZC]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-;#################################################################
-;# EVAMTL
-;#################################################################
-
-[Person:EVAMTL]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:EVAMTL]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:EVAMTL]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:EVAMTL]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:EVAMTL]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-;#################################################################
-;# EVAP
-;#################################################################
-
-[Person:EVAP]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:EVAP]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:EVAP]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:EVAP]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:EVAP]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-;#################################################################
-;# EVOSG
-;#################################################################
-
-[Person:EVOSG]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:EVOSG]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:EVOSG]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:EVOSG]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:EVOSG]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-;#################################################################
-;# EZGH
-;#################################################################
-
-[Person:EZGH]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:EZGH]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:EZGH]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:EZGH]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:EZGH]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-;#################################################################
-;# LWSZ
-;#################################################################
-
-[Person:LWSZ]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:LWSZ]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:LWSZ]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:LWSZ]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:LWSZ]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
+;
+;[Person:EGE]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:EGE]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:EGE]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:EGE]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:EGE]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;;#################################################################
+;;# ESVL
+;;#################################################################
+;
+;[Person:ESVL]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:ESVL]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:ESVL]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:ESVL]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:ESVL]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;;#################################################################
+;;# ESZC
+;;#################################################################
+;
+;[Person:ESZC]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:ESZC]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:ESZC]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:ESZC]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:ESZC]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;;#################################################################
+;;# EVAMTL
+;;#################################################################
+;
+;[Person:EVAMTL]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:EVAMTL]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:EVAMTL]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:EVAMTL]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:EVAMTL]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;;#################################################################
+;;# EVAP
+;;#################################################################
+;
+;[Person:EVAP]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:EVAP]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:EVAP]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:EVAP]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:EVAP]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;;#################################################################
+;;# EVOSG
+;;#################################################################
+;
+;[Person:EVOSG]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:EVOSG]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:EVOSG]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:EVOSG]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:EVOSG]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;;#################################################################
+;;# EZGH
+;;#################################################################
+;
+;[Person:EZGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:EZGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:EZGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:EZGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:EZGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;;#################################################################
+;;# LWSZ
+;;#################################################################
+;
+;[Person:LWSZ]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:LWSZ]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:LWSZ]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:LWSZ]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:LWSZ]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
