--- a/Sphere/Common/Database/Config/Billing.ini
+++ b/Sphere/Common/Database/Config/Billing.ini
@@ -13,95 +13,95 @@ Database = 'KredaBilling'
 ;#################################################################
 ;# EGE
 ;#################################################################
-
-[Account:EGE]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaBilling'
-
-;#################################################################
-;# ESVL
-;#################################################################
-
-[Account:ESVL]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaBilling'
-
-;#################################################################
-;# ESZC
-;#################################################################
-
-[Account:ESZC]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaBilling'
-
-;#################################################################
-;# EVAMTL
-;#################################################################
-
-[Account:EVAMTL]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaBilling'
-
-;#################################################################
-;# EVAP
-;#################################################################
-
-[Account:EVAP]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaBilling'
-
-;#################################################################
-;# EVOSG
-;#################################################################
-
-[Account:EVOSG]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaBilling'
-
-;#################################################################
-;# EZGH
-;#################################################################
-
-[Account:EZGH]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaBilling'
-
-;#################################################################
-;# LWSZ
-;#################################################################
-
-[Account:LWSZ]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaBilling'
+;
+;[Account:EGE]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaBilling'
+;
+;;#################################################################
+;;# ESVL
+;;#################################################################
+;
+;[Account:ESVL]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaBilling'
+;
+;;#################################################################
+;;# ESZC
+;;#################################################################
+;
+;[Account:ESZC]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaBilling'
+;
+;;#################################################################
+;;# EVAMTL
+;;#################################################################
+;
+;[Account:EVAMTL]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaBilling'
+;
+;;#################################################################
+;;# EVAP
+;;#################################################################
+;
+;[Account:EVAP]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaBilling'
+;
+;;#################################################################
+;;# EVOSG
+;;#################################################################
+;
+;[Account:EVOSG]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaBilling'
+;
+;;#################################################################
+;;# EZGH
+;;#################################################################
+;
+;[Account:EZGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaBilling'
+;
+;;#################################################################
+;;# LWSZ
+;;#################################################################
+;
+;[Account:LWSZ]
+;Driver = 'PdoMySql'
+;Host = '192.168.10.178'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaBilling'
