Code Review: Quality

--- a/Sphere/Common/Database/Config/Management.ini
+++ b/Sphere/Common/Database/Config/Management.ini
@@ -393,3 +393,47 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaStudent'
+
+;#################################################################
+;# FEGH
+;#################################################################
+
+[Person:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaPerson'
+
+[Address:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaAddress'
+
+[Education:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaEducation'
+
+[Course:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaCourse'
+
+[Student:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaStudent'
