--- a/Sphere/Common/Database/Config/Billing.ini
+++ b/Sphere/Common/Database/Config/Billing.ini
@@ -105,3 +105,15 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaBilling'
+
+;#################################################################
+;# FEGH
+;#################################################################
+
+[Account:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
