--- a/Sphere/Common/Database/Config/Graduation.ini
+++ b/Sphere/Common/Database/Config/Graduation.ini
@@ -249,3 +249,31 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaGraduation'
+
+;#################################################################
+;# FEGH
+;#################################################################
+
+[Grade:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Score:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
+
+[Weight:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaGraduation'
