--- a/Sphere/Common/Database/Config/Billing.ini
+++ b/Sphere/Common/Database/Config/Billing.ini
@@ -18,6 +18,14 @@ Username = 'root'
 Password = ''
 Database = 'KredaBilling'
 
+[Invoicing:DS]
+Driver = 'PdoMySql'
+Host = '127.0.0.1'
+Port =
+Username = 'root'
+Password = ''
+Database = 'KredaBilling'
+
 ;#################################################################
 ;# EGE
 ;#################################################################
