Code Review: Refactor/Quality

--- a/Sphere/Common/Database/Config/Billing.ini
+++ b/Sphere/Common/Database/Config/Billing.ini
@@ -18,7 +18,7 @@ Username = 'root'
 Password = ''
 Database = 'KredaBilling'
 
-[Invoicing:DS]
+[Invoice:DS]
 Driver = 'PdoMySql'
 Host = '127.0.0.1'
 Port =
